features/polyExplorer/src/components/dataSharingGauge/dataSharingGauge.css
.data-sharing-gauge {
    height: 66px;
}

.data-sharing-gauge[data-sharing-type="dataTypes"] {
    --highlight-color: var(--data-exp-data-types);
}

.data-sharing-gauge[data-sharing-type="purposes"] {
    --highlight-color: var(--data-exp-purposes);
}

.data-sharing-gauge[data-sharing-type="companies"] {
    --highlight-color: var(--data-exp-companies);
}

.data-sharing-gauge[data-sharing-type="jurisdictions"] {
    --highlight-color: var(--data-exp-data-regions);
}

.data-sharing-top-labels {
    position: relative;
}

.data-sharing-gauge-main-label {
    margin: 0;
    color: var(--highlight-color);
    font-size: 24px;
}

.data-sharing-gauge-max-label,
.data-sharing-gauge-average-label {
    font-size: 12px;
    color: var(--highlight-color);
}

.data-sharing-gauge-max-label {
    position: absolute;
    right: 0;
    bottom: 4px;
}

.data-sharing-gauge-outline,
.data-sharing-gauge-average-marker.light {
    border-color: var(--highlight-color);
}

.data-sharing-gauge-outline,
.data-sharing-gauge-fill {
    height: 12px;
    border-radius: 6px;
    box-sizing: border-box;
}

.data-sharing-gauge-outline {
    border-style: solid;
    border-width: 1px;
}

.data-sharing-gauge-fill {
    position: relative;
    left: 0;
    top: -12px;
    background: var(--highlight-color);
}

.data-sharing-gauge-fill.partial {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.data-sharing-gauge-average-marker {
    position: relative;
    top: calc(-12px - 12px);
    left: 0;
    border-right-style: solid;
    border-right-width: 2px;
}

.data-sharing-gauge-average-marker.dark {
    height: 14px;
    margin-top: -1px;
    border-color: var(--color-dark);
}

.data-sharing-gauge-average-marker.light {
    height: 10px;
    margin-top: 1px;
    margin-bottom: 2px;
}

.data-sharing-gauge-average-label {
    position: relative;
    top: 12px;
    right: calc(-40px - 1px);
    width: 100px;
    opacity: 0.7;
    text-align: center;
}

.data-sharing-gauge-average-marker.dark .data-sharing-gauge-average-label {
    margin-top: 2px;
}

.data-sharing-gauge-average-marker.light .data-sharing-gauge-average-label {
    margin-top: 0;
}

